# libevent

./: .exrc  .gitignore  .mailmap  .travis.yml  .uncrustify  .yamllint  Android.mk  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  ChangeLog  ChangeLog-1.4  ChangeLog-2.0  ChangeLog-2.1  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.nmake  PreLoad.cmake  PrivacyInfo.xcprivacy  README  README.Android  README.dtrace.md  README.md  SECURITY.md  Vagrantfile  acconfig.h  appveyor.yml  arc4random.c  atomic-internal.h  autogen.sh  bench-heap.c  bench-wheel.c  bench.c  bench.h  biicode.conf  buffer.c  buffer_iocp.c  bufferevent-internal.h  (+119 more)
.github/: dependabot.yml  travis-ci-key.enc
.github/workflows/: DragonflyBSD.yml  FreeBSD.yml  NetBSD.yml  OpenBSD.yml  abi.yml  build.yml  cancel.yml  cifuzz.yml  coverage.yml  doxygen.yml  linux.yml  macos.yml  master.yml  mingw.yml  scorecard.yml  windows.yml
Documentation/: Building.md  Developers.md
WIN32-Code/: config.h  evconfig-private.h  event-config.h  getopt_long.c  misc.c  misc.h  regress.gen.c  regress.gen.h  tree.h  unistd.h  win32.c
WIN32-Code/event2/: event-config.h
WIN32-Code/nmake/event2/: event-config.h
WIN32-Prj/: libevent.dsp  libevent.dsw  libevent.sln  libevent.vcproj
WIN32-Prj/event_test/: event_test.dsp
WIN32-Prj/regress/: regress.vcproj
WIN32-Prj/signal_test/: signal_test.dsp
WIN32-Prj/time_test/: time_test.dsp
android/: evconfig-private.h
android/event2/: config.h  event-config.h
cmake/: AddCompilerFlags.cmake  AddEventLibrary.cmake  AddLinkerFlags.cmake  CheckConstExists.cmake  CheckFileOffsetBits.cmake  CheckFunctionExistsEx.c  CheckFunctionExistsEx.cmake  CheckPrototypeDefinition.cmake  CheckSymbolsExist.cmake  CheckWorkingKqueue.cmake  CodeCoverage.cmake  FindMbedTLS.cmake  LibeventConfig.cmake.in  Macros.cmake  RenameDoxygen.cmake  UseDoxygen.cmake  VersionViaGit.cmake
compat/sys/: _time.h  queue.h  tree.h
contrib/timeout/: Makefile  bench-wheel.c  bench.c  bench.h  debug.h  timeout.c  timeout.h
evconfig-private/: configure.in
extra/: lsan.supp  tsan.supp
extra/abi-check/: README.md  abi_check.sh  debian.patch  libevent.json
extra/release/: changelog.py  update-contributors.sh
include/: Makefile.am  event.h  include.am
include/event2/: buffer.h  buffer_compat.h  bufferevent.h  bufferevent_compat.h  bufferevent_ssl.h  bufferevent_struct.h  dns.h  dns_compat.h  dns_struct.h  event.h  event_compat.h  event_struct.h  http.h  http_compat.h  http_struct.h  keyvalq_struct.h  listener.h  rpc.h  rpc_compat.h  rpc_struct.h  tag.h  tag_compat.h  thread.h  util.h  visibility.h  watch.h  ws.h
m4/: ax_check_funcs_ex.m4  ax_prog_doxygen.m4  ax_pthread.m4  libevent_liburing.m4  libevent_mbedtls.m4  libevent_openssl.m4
sample/: Makefile.am  becat.c  bufferevent-benchmark.c  dns-example.c  event-read-fifo.c  event-test.c  hello-world.c  http-connect.c  http-load-balancer.c  http-server.c  https-client-proxy.c  https-client.c  include.am  le-proxy.c  openssl_hostname_validation.c  pthread-echo-server.c  pthread-pool.c  signal-test.c  ssl-client-mbedtls.c  ssl_client1.c  time-test.c  watch-timing.c  ws-chat-server.c  ws-chat.html
test/: Makefile.am  Makefile.nmake  bench.c  bench_bufferevent.c  bench_bufferevent_io.c  bench_cascade.c  bench_http.c  bench_httpclient.c  bench_loop.c  check-dumpevents.py  include.am  print-winsock-errors.c  regress.c  regress.h  regress.rpc  regress_buffer.c  regress_bufferevent.c  regress_dns.c  regress_et.c  regress_finalize.c  regress_http.c  regress_http.h  regress_io_uring.c  regress_iocp.c  regress_listener.c  regress_main.c  regress_mbedtls.c  regress_minheap.c  regress_openssl.c  regress_pthread.c  regress_rpc.c  regress_ssl.c  regress_testutils.c  regress_testutils.h  regress_thread.c  regress_thread.h  regress_timer_timeout.c  regress_util.c  regress_watch.c  regress_ws.c  (+23 more)
test-export/: CMakeLists.txt  test-export.c  test-export.py
课程/: 第01课_IO多路复用原理.md  第02课_初识libevent架构概览与第一个程序.md  第03课_event_base深入_事件循环的心脏.md  第04课_event事件管理_注册与回调机制.md  第05课_定时器事件_最小堆与精确调度.md  第06课_evbuffer_高效缓冲区管理.md  第07课_bufferevent基础_异步读写抽象.md  第08课_bufferevent进阶_过滤器_pair与限速.md  第09课_evconnlistener与TCP_Server完整模式.md  第10课_信号处理与工具函数.md
